--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,7 @@ body {
     min-height: 100vh;
     font-size: 62.5% / 1.5;
     font-family: 'Fira Sans', sans-serif;
+    background: #f2f2f2;
 }
 
 #app {
@@ -59,8 +60,7 @@ header {
         padding: 0.8em 0;
         display: block;
         background: #111;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        border-bottom: 3px solid var(--border);
         
         ul {
             display: flex;
@@ -113,19 +113,22 @@ header {
 main {
     display: block;
     width: 70%;
-    margin: 2em auto;
+    margin: 4em auto;
     padding: 2em;
 
     /* remove me */
     min-height: 600px;
 
     article {
-        border-radius: 4px;
-        background: #f2f2f2;
         padding: 4em;
         color: #404040;
+        background: white;
+        border-bottom: 3px solid var(--border);
 
         &:first-child {
+            color: black;
+            padding-top: 0;
+            border-bottom: none;
             background: none;
         }
     }
@@ -139,7 +142,7 @@ a {
 hr {
     margin: 1.5em 0;
     border: 0;
-	border-top: 1px dashed var(--border);
+	border-top: 2px dashed var(--border);
 }
 
 span.bold {
@@ -153,7 +156,7 @@ ul, ol {
 /* footer */
 footer {
     margin-top: auto;
-    background: var(--off-white);
+    background: var(--footer-bg);
 
     .resources {
         padding: 2em;
@@ -195,11 +198,9 @@ footer {
     padding: 2em;
 }
 
-.privacyKeyword {
-    color: #1e88e5;
-}
-.peopleKeyword {
-    color: #ffb300;    
+.keyword {
+    font-weight: bolder;
+    border-bottom: 2px dashed var(--border);
 }
 
 .missionContainer {
@@ -207,15 +208,13 @@ footer {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 0.2em;
-    text-align: center;
+    padding: 1em;
+    margin-bottom: 2em;
     
     .mission {
-        width: 80%;
-        margin-bottom: 1.2em;
-        font-size: 26pt;
+        width: 90%;
+        font-size: 20pt;
         padding: 1em;
-        font-style: italic;
     }
 }
 
