--- a/src/main.css
+++ b/src/main.css
@@ -217,6 +217,10 @@ footer {
     main {
         width: 100%;
     }
+
+    .mission {
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width: 530px) {
